Add Register image and phone
