# laravel.pv113.com/app/Http/Controllers/Api/AuthController.php
@@ -3,9 +3,14 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
+use Intervention\Image\Drivers\Gd\Driver;
+use Intervention\Image\ImageManager;
 use Symfony\Component\HttpFoundation\Response;
+use Tymon\JWTAuth\Contracts\Providers\Auth;
 
 class AuthController extends Controller
 {
@@ -69,5 +74,79 @@ class AuthController extends Controller
             return response()->json(['error'=>'Не вірно вказано дані!'], Response::HTTP_UNAUTHORIZED);
         }
         return response()->json(['token'=>$token], Response::HTTP_OK);
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/api/register",
+     *   tags={"Auth"},
+     *   @OA\RequestBody(
+     *     required=true,
+     *     description="User register data",
+     *     @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *       @OA\Schema(
+     *         required={"name","email", "password", "image", "phone"},
+     *         @OA\Property(property="name", type="string"),
+     *         @OA\Property(property="email", type="string"),
+     *         @OA\Property(property="password", type="string"),
+     *         @OA\Property(property="image", type="file"),
+     *         @OA\Property(property="phone", type="string"),
+     *       )
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="Success",
+     *     @OA\MediaType(
+     *       mediaType="application/json"
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=401,
+     *     description="Unauthenticated"
+     *   )
+     * )
+     */
+    public function register(Request $request)
+    {
+        $request->validate([
+            'name' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255|unique:users',
+            'password' => 'required|string|min:6',
+            'phone' => 'nullable|string|max:255',
+            'image' => 'file',
+        ]);
+
+        if ($request->hasFile('image')) {
+            $takeImage = $request->file('image');
+            $manager = new ImageManager(new Driver());
+
+            $filename = time();
+
+            $sizes = [100, 300, 500];
+
+            foreach ($sizes as $size) {
+                $image = $manager->read($takeImage);
+                $image->scale(width: $size, height: $size);
+                $image->toWebp()->save(base_path('public/upload/' . $size . '_' . $filename . '.webp'));
+            }
+        }
+
+        $user = User::create([
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => Hash::make($request->password),
+            'phone' => $request->phone,
+            'image' => $filename . '.webp',
+        ]);
+
+        $token = auth()->login($user);
+
+        return response()->json(['token' => $token], Response::HTTP_CREATED);
+    }
+    private function createToken($user)
+    {
+        return Auth::login($user);
     }
 }
