# laravel.pv113.com/routes/api.php
@@ -19,3 +19,4 @@ Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
 Route::post('/send/email', [SenderController::class, 'send_email']);
 
 Route::post('/login', [AuthController::class, 'login']);
+Route::post('/register', [AuthController::class, 'register']);
